--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=web
+spring.application.name=consul-demo-downstream
 server.port=8103
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
